fix align button

--- a/Module-01_Frontend/W10 - project/css/components/header.css
+++ b/Module-01_Frontend/W10 - project/css/components/header.css
@@ -17,7 +17,7 @@
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  padding: 0px 3rem;
+  padding: var(--space-padding-y-mobile) var(--space-padding-x-mobile);
   margin: 0 0 0 0;
 }
 
@@ -56,6 +56,7 @@
   padding: 0;
   margin: 0;
   display: flex;
+  align-items: center;
   flex-direction: column;
   gap: 1rem;
 }
@@ -96,13 +97,13 @@
   }
 
   .header-container {
-    padding: 1% 2%;
+    padding: var(--space-padding-y-desktop) var(--space-padding-x-desktop);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1100px;
+    max-width: var(--container-max-width-default);
     margin: 0 auto;
   }
 
@@ -126,6 +127,6 @@
 /* -------- ULTRAWIDE -------- */
 @media (min-width: 1100px) {
   .header-container {
-    padding: 1% 0%;
+    padding: var(--space-padding-y-ultrawide) var(--space-padding-x-ultrawide);
   }
 }
